--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutterstarterkit" "\0"
+            VALUE "FileDescription", "tripai" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutterstarterkit" "\0"
+            VALUE "InternalName", "tripai" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutterstarterkit.exe" "\0"
-            VALUE "ProductName", "flutterstarterkit" "\0"
+            VALUE "OriginalFilename", "tripai.exe" "\0"
+            VALUE "ProductName", "tripai" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
