--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutterstarterkit",
-    "short_name": "flutterstarterkit",
+    "name": "tripai",
+    "short_name": "tripai",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
