--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^7.0.0
+  flutter_svg: ^2.0.5
   
   flutter_localizations:
     sdk: flutter
   intl: any
+  hive: ^2.2.3
+  path_provider: ^2.0.15
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -88,9 +92,8 @@ flutter:
 
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
