--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/img/intro/
+    - assets/img/login/
+    - assets/img/location/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
