--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.0.15
   hive_flutter: ^1.1.0
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
