--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.0
+  http: ^0.13.6
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
