--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   bloc: ^8.1.2
+  cached_network_image: ^3.2.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -106,6 +108,8 @@ flutter:
     - assets/img/location/
     - assets/img/home/
     - assets/img/home/weather/
+    - assets/img/home/place/
+    - assets/img/home/navbar/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
